--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,25 @@
   "compilerOptions": {
     "rootDir": "./",
     "outDir": "./build",
-  },
+    "paths": {
+      "#controllers/*": ["./app/controllers/*.js"],
+      "#enums/*": ["./app/enums/*.js"],
+      "#exceptions/*": ["./app/exceptions/*.js"],
+      "#models/*": ["./app/models/*.js"],
+      "#mails/*": ["./app/mails/*.js"],
+      "#services/*": ["./app/services/*.js"],
+      "#listeners/*": ["./app/listeners/*.js"],
+      "#events/*": ["./app/events/*.js"],
+      "#middleware/*": ["./app/middleware/*.js"],
+      "#validators/*": ["./app/validators/*.js"],
+      "#providers/*": ["./providers/*.js"],
+      "#policies/*": ["./app/policies/*.js"],
+      "#abilities/*": ["./app/abilities/*.js"],
+      "#database/*": ["./database/*.js"],
+      "#tests/*": ["./tests/*.js"],
+      "#start/*": ["./start/*.js"],
+      "#config/*": ["./config/*.js"],
+      "@ioc:*": ["./node_modules/@adonisjs/core/build/src/IocContainer/*"]
+    }
+  }
 }
