chore: Update npm dependencies

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
     "@swc/core": "^1.4.16",
+    "@types/date-fns": "^2.6.0",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.12.7",
     "autoprefixer": "^10.4.19",
@@ -62,6 +63,9 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^2.0.2",
     "@vinejs/vine": "^2.0.0",
+    "chart.js": "^4.4.3",
+    "d3": "^7.9.0",
+    "date-fns": "^3.6.0",
     "edge.js": "^6.0.2",
     "kite-js": "^1.0.25",
     "luxon": "^3.4.4",
